# android_ffmpeg_h264

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/gloomyer/h264/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: gcodec.cpp
app/src/main/java/com/gloomyer/h264/: MainActivity.java
app/src/main/java/com/gloomyer/h264/jni/: JNIBridge.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/gloomyer/h264/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
